kind-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-app
  labels:
    app: http-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-app
  template:
    metadata:
      labels:
        app: http-app
    spec:
      containers:
      - name: http-app
        image: fernandogg99/http-app:latest
        ports:
        - containerPort: 8080
